Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/limits/ArrayDims2.out
ArrayDims2.java:37:22: compiler.err.limit.dimensions
1 error
